--- a/templates/challenge.html
+++ b/templates/challenge.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to AutoQuiz: Challenge!</title>
+    <title>Welcome to AutoQuiz: Challenge! (Beta Version)</title>
 
     <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
     <script src="{{ url_for('static', filename='jquery.min.js') }}" type="text/javascript"></script>
@@ -14,14 +14,14 @@
   </head>
   <body>
     <nav class="llab-nav navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="nav navbar-nav navbar-left navbar-title">CS10 AutoQuiz | Spring 2018 | UC Berkeley</div>
+      <div class="nav navbar-nav navbar-left navbar-title">CS10 AutoQuiz (Beta) | Spring 2018 | UC Berkeley</div>
       <div class="nav navbar-nav navbar-right">
         <ul class="nav-btns btn-group">
           <a class="btn btn-default" id="return" href="{{url_for('welcome')}}">return</a>
         </ul>
       </div>
     </nav>
-    <div class="title-small-screen">CS10 AutoQuiz | Spring 2018 | UC Berkeley</div>
+    <div class="title-small-screen">CS10 AutoQuiz (Beta) | Spring 2018 | UC Berkeley</div>
     <div style="display:none;">
         <form action="{{ url_for('challenge_section') }}" method=post id="next_go">
           <!--input type=hidden name=question_id value=10 id="question_id"/-->
@@ -55,10 +55,10 @@
               // correctly answered
               document.getElementById(report_div_id).innerHTML="<font color='green'>Correct! Congratulations!</font>";
               // show explain
-              document.getElementById(hint_div_id).innerHTML="Explain: {{question_elem[4]}}";
+              document.getElementById(hint_div_id).innerHTML="Explanation: {{question_elem[4]}}";
             } else {
               // wrong
-              document.getElementById(report_div_id).innerHTML="Haven't get it correct yet, please think twice.";
+              document.getElementById(report_div_id).innerHTML="That's not correct, better luck next time!";
               // show hint
               document.getElementById(hint_div_id).innerHTML="HINT: {{question_elem[4]}}";
             }
