--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -51,7 +51,7 @@
           {% else %}
           <a class="btn btn-default" data-toggle="modal" data-target="#myModal">login/register</a>
           {% endif %}
-          <a class="btn btn-default" href="http://cs10.org/fa17/" target="_blank">CS10</a>
+          <a class="btn btn-default" href="http://cs10.org/sp18/" target="_blank">CS10</a>
           <!--button type="button" class="btn btn-secondary"> Log Out </button-->
         </ul>
       </div>
